# faratoqai_bot

./: bot.py  pyproject.toml
