[tool.poetry]
name = "faratoqai-bot"
version = "0.1.0"
description = ""
authors = ["lol4ikz <nurmukhanov.k@gmail.com>"]
readme = "README.md"
packages = [{include = "faratoqai_bot"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
